<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <sharemyscreen.sharemyscreen.Fab
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        fab:fab_colorNormal="@color/colorPrimary"
        fab:fab_colorPressed="@color/colorPrimary"
        fab:fab_colorRipple="@color/colorPrimary"/>
    <!-- Overlay that dims the screen -->
    <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Circular reveal container for the sheet -->
    <io.codetail.widget.RevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <!-- Sheet that contains your items -->
        <android.support.v7.widget.CardView
            android:id="@+id/fab_sheet"
            android:layout_width="260dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Recording -->
                <TextView
                    android:id="@+id/fab_sheet_item_add_by_group"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:drawableLeft="@drawable/ic_group_add_black_24dp"
                    android:drawableStart="@drawable/ic_group_add_black_24dp"
                    android:text="@string/room_createRoomByGroup" />

                <!-- Reminder -->
                <TextView
                    android:id="@+id/fab_sheet_item_add_by_user"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:drawableLeft="@drawable/ic_person_add_black_24dp"
                    android:drawableStart="@drawable/ic_person_add_black_24dp"
                    android:text="@string/room_createRoomByUser" />

                <!-- Note -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:id="@+id/fab_sheet_item_note"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@drawable/ic_add_black_24dp"
                        android:drawableStart="@drawable/ic_add_black_24dp"
                        android:text="@string/room_addRoom" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </io.codetail.widget.RevealLinearLayout>

</FrameLayout>