<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/display_snackbar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">



        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:id="@+id/LinearLayout_signin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signin_email_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signin_email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signin_username_editText_hint"
                    android:singleLine="true"
                    android:lines="1" />
                <requestFocus></requestFocus>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signin_password_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signin_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signin_password_editText_hint"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:singleLine="true"
                    android:lines="1" />
                <requestFocus></requestFocus>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinearLayout_signin">

            <com.dd.processbutton.iml.ActionProcessButton
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:id="@+id/signin_submitLogin"
                android:text="@string/signin_submitLogin"
                android:theme="@style/MyButtonLoading"
                android:layout_weight="1.0"
                custom:pb_textError="Error"
                custom:pb_textComplete="Success"
                custom:pb_textProgress="Loading"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />

            <com.dd.processbutton.iml.ActionProcessButton
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:text="@string/signin_signup"
                android:id="@+id/signin_signup"
                android:layout_weight="1.0"
                android:theme="@style/MyButtonLoading"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinearLayout_signin">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/signin_facebook"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1.0"/>

            <!--<com.dd.processbutton.iml.ActionProcessButton-->
                <!--android:layout_width="0.0dip"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:id="@+id/signin_facebook"-->
                <!--android:text="@string/signin_facebook"-->
                <!--android:theme="@style/MyButtonLoading"-->
                <!--android:layout_weight="1.0"-->
                <!--custom:pb_textError="Error"-->
                <!--custom:pb_textComplete="Success"-->
                <!--custom:pb_textProgress="Loading"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_marginRight="5dp"-->
                <!--/>-->

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signin_google"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0" />

            <!--<com.dd.processbutton.iml.ActionProcessButton-->
                <!--android:layout_width="0.0dip"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:text="@string/signin_google"-->
                <!--android:id="@+id/signin_google"-->
                <!--android:layout_weight="1.0"-->
                <!--android:theme="@style/MyButtonLoading"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_marginRight="5dp"-->
                <!--/>-->

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
